--- a/rrn/pom.xml
+++ b/rrn/pom.xml
@@ -38,6 +38,7 @@
 				<executions>
 					<execution>
 						<goals>
+							<goal>compile</goal>
 							<goal>testCompile</goal>
 						</goals>
 					</execution>
@@ -108,6 +109,11 @@
 			<artifactId>spock-core</artifactId>
 			<version>0.7-groovy-2.0</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
