--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -158,6 +158,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
@@ -200,6 +201,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.26</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>3.2.4.RELEASE</version>
 		</dependency>
 	</dependencies>
 
